# model-trainer

./: .dockerignore  .env.example  .gitignore  CACHE_AND_TOKENIZER_CLEANUP_DESIGN.md  CLEANUP_DESIGN.md  DEPLOYING_RAILWAY.md  DESIGN.md  INTEGRATION-PLAN.md  Makefile  README.md  UPDATE_DATA_BANK_INTEGRATION.md  diagnose_redis.py  docker-compose.yml  railway.json  railway.toml  test_api_endpoints.py  test_env_vars.py  verify_worker_env.py
docs/: ARTIFACTS_TO_DATA_BANK.md
server/: Dockerfile  pyproject.toml
server/config/: app.toml
server/model_trainer/: __init__.py
server/model_trainer/api/: main.py  middleware.py  request_context.py
server/model_trainer/api/routes/: artifacts.py  health.py  runs.py  tokenizers.py
server/model_trainer/api/schemas/: artifacts.py  health.py  pointers.py  runs.py  tokenizers.py
server/model_trainer/core/: __init__.py
server/model_trainer/core/config/: __init__.py  settings.py
server/model_trainer/core/contracts/: compute.py  dataset.py  model.py  queue.py  tokenizer.py
server/model_trainer/core/errors/: base.py  handlers.py
server/model_trainer/core/infra/: __init__.py  paths.py  redis_utils.py
server/model_trainer/core/logging/: service.py  setup.py  types.py
server/model_trainer/core/services/: __init__.py  container.py  registries.py
server/model_trainer/core/services/data/: artifact_downloader.py  artifact_uploader.py  corpus.py  corpus_cache_cleanup.py  corpus_fetcher.py  data_bank_client.py
server/model_trainer/core/services/dataset/: local_text_builder.py
server/model_trainer/core/services/model/: __init__.py  gpt2_backend_impl.py  unavailable_backend.py
server/model_trainer/core/services/queue/: rq_adapter.py
server/model_trainer/core/services/storage/: artifact_cleanup.py
server/model_trainer/core/services/tokenizer/: bpe_backend.py  spm_backend.py  tokenizer_cleanup.py
server/model_trainer/core/services/training/: __init__.py  dataset_builder.py  gpt2_backend.py
server/model_trainer/events/: trainer.py
server/model_trainer/infra/: __init__.py
server/model_trainer/infra/persistence/: __init__.py  models.py
server/model_trainer/infra/storage/: run_store.py
server/model_trainer/orchestrators/: tokenizer_orchestrator.py  training_orchestrator.py
server/model_trainer/worker/: rq_worker.py  tokenizer_worker.py  training_worker.py
server/tests/: test_app_factory_startup.py  test_artifact_uploader_unit.py  test_artifacts_and_health_branches.py  test_artifacts_download.py  test_artifacts_range_variants.py  test_artifacts_routes_edges.py  test_artifacts_stream_early_eof.py  test_auth_api_key_and_status_message.py  test_backend_name_methods.py  test_bpe_backend_edges.py  test_compute_localcpu.py  test_compute_threads_env.py  test_container_tokenizer_registry_branch.py  test_corpus_and_dataset_edges.py  test_corpus_fetcher.py  test_corpus_fetcher_errors.py  test_corpus_fetcher_logging.py  test_corpus_iter_lines_empty.py  test_corpus_sample_lines_branches.py  test_data_bank_client.py  test_dataset_builder.py  test_error_base_to_dict.py  test_error_handler_request_id.py  test_events_trainer.py  test_gpt2_backend_impl_branches.py  test_gpt2_backend_impl_edges.py  test_gpt2_io_edges.py  test_gpt2_prepare_and_backend_impl.py  test_gpt2_train_heartbeat_branch.py  test_gpt2_train_progress_end_epoch.py  test_health_endpoints.py  test_health_readyz_branches.py  test_health_redis_disabled.py  test_logging_attach_existing_handler_branch.py  test_logging_close_cycle.py  test_logging_close_no_handler.py  test_logging_dedup.py  test_logging_service_adapter_and_formatter.py  test_orchestrator_payload_user_id.py  test_orchestrators_corpus_file_id_empty.py  (+53 more)
server/tests/core/services/data/: test_artifact_downloader.py  test_corpus_cache_cleanup.py
server/tests/core/services/storage/: test_artifact_cleanup.py
server/tests/core/services/tokenizer/: test_tokenizer_cleanup.py
server/typings/fakeredis/: __init__.pyi
server/typings/pydantic/: __init__.pyi
server/typings/pydantic_settings/: __init__.pyi
server/typings/rq/: __init__.pyi  retry.pyi
server/typings/tokenizers/: __init__.pyi  models.pyi  pre_tokenizers.pyi  trainers.pyi
server/typings/tomllib/: __init__.pyi
server/typings/torch/: __init__.pyi  serialization.pyi
server/typings/torch/nn/: __init__.pyi
server/typings/transformers/: __init__.pyi
(+15 files in other folders)
