[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "model-trainer-server"
version = "0.1.0"
description = "Model Trainer API and worker (CPU-first, strict typing, RQ)"
authors = ["Your Team <team@example.com>"]
packages = [{ include = "model_trainer" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
redis = "^5.0.7"
rq = "^1.16.2"
python-json-logger = "^3.2.1"
typing-extensions = "^4.12.2"

# We will add model libs later during implementation steps
# transformers = "^4.44.0"
# torch = "^2.4.0"
# datasets = "^3.0.0"
# tokenizers = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.2"
mypy = "^1.11.2"
ruff = "^0.6.5"
black = "^24.10.0"
types-redis = "^4.6.0.20241004"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["model_trainer", "tests"]
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E","F","I","B","BLE","UP","N","C4","SIM","RET","C90","RUF","ANN"
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.cast" = { msg = "Do not use typing.cast; prefer precise types or adapters." }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
