[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "model-trainer-server"
version = "0.1.0"
description = "Model Trainer API and worker (CPU-first, strict typing, RQ)"
authors = ["Your Team <team@example.com>"]
packages = [{ include = "model_trainer" }]

# Prefer CPU-only wheels for PyTorch to reduce image size and avoid CUDA deps in containers
[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
hypercorn = "^0.18.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
redis = "^5.0.7"
rq = "^2.0.0"
python-json-logger = "^3.2.1"
typing-extensions = "^4.12.2"
transformers = "^4.45.0"
datasets = "^3.0.1"
tokenizers = "^0.20.0"
httpx = "^0.27.2"

# CPU-only Torch to keep containers lean
torch = {version = "2.4.1+cpu", source = "pytorch-cpu"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-timeout = "^2.3.1"
mypy = "^1.11.2"
ruff = "^0.6.5"
black = "^24.10.0"
types-redis = "^4.6.0.20241004"
fakeredis = {version = "^2.21.3", extras = ["lua"]}
pytest-cov = "^7.0.0"
pytest-xdist = "^3.6.0"

[tool.poetry.scripts]
modeltrainer-rq-worker = "model_trainer.worker.rq_worker:main"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
mypy_path = ["typings"]
plugins = ["pydantic.mypy"]
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["model_trainer", "tests"]
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E","F","I","B","BLE","UP","N","C4","SIM","RET","C90","RUF","ANN"
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.cast" = { msg = "Do not use typing.cast; prefer precise types or adapters." }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
timeout_method = "thread"
